# autometrics-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
autometrics/: Cargo.toml  build.rs
autometrics/src/: README.md  lib.rs  otel_push_exporter.rs  prometheus_exporter.rs
autometrics/src/tracker/: opentelemetry.rs
autometrics/tests/: exemplars_test.rs  settings_custom_registry.rs
autometrics/tests/compilation/error_locus/fail/: report_original_line.stderr
examples/custom-metrics/: Cargo.toml  README.md
examples/custom-metrics/src/: main.rs
examples/exemplars-tracing/src/: main.rs
examples/full-api/src/: main.rs  routes.rs
examples/grpc-http/src/: main.rs
examples/opentelemetry-push/: Cargo.toml
examples/opentelemetry-push-custom/: Cargo.toml
