[package]
name = "example-opentelemetry-push-custom"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
autometrics = { path = "../../autometrics", features = ["opentelemetry-0_30"] }
autometrics-example-util = { path = "../util" }
# Note that the version of the opentelemetry crate MUST match
# the version used by autometrics
opentelemetry = { version = "0.30", features = ["metrics"] }
opentelemetry_sdk = { version = "0.30", features = ["metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.30", features = ["tonic", "metrics"] }
opentelemetry-semantic-conventions = { version = "0.30.0" }
tokio = { version = "1", features = ["full"] }
